styles/style.css
@import url("reset.css");



a {
    color: black;
    text-decoration: none;
}

a:hover {
  color: rgba(47, 113, 39, 0.831)
}

h3, p {
  color: white;
  margin: 5px;
  padding: 1px;
  letter-spacing: normal;
}

.title{
  font-style: italic;
}

h4{
  color: white;
  text-align: center;
  font-size: 1.5em;
  padding: 10px;
}
p{
  font-size: 1em;
  text-align: justify;
  text-indent: 50px;
  line-height: 1.3em;
}

h3{
  font-size: 2em;
  color:palegoldenrod;
  text-align: center;
}


body {
  background-color: black;
  font-family: 'Noto Serif JP', serif;
  min-height: 90vh;
}

h1 {
  font-size: 7vw;  
  color: white;
}

h2{
  font-size: 4vw;
  margin: 10px;
  color: rgb(189, 249, 186);
}

main {
  position: relative;
  top: 50px;
  width: 100%;
  height: 70vh;
  margin: 7% auto auto auto;
  padding-top: 1vh;
  padding-bottom: 50px;
  
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;
}

#bio-main {
  position: absolute;
  top: 100px;
  width: 100%;
  height: 70vh;
  margin: 1vh auto auto auto;
  padding-top: 1vh;
  padding-bottom: 50px;
  
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}



#top-nav-bar{
  position: fixed;
  background-color: lightgray;
  top: 0;
  width: 100%;
  font-family: 'Cairo', sans-serif;
  z-index: 100;

  padding: auto;
  display: flex;
  flex-wrap: nowrap;
  justify-content: space-around;
  align-items: stretch;
}

#name-on-bar{
  margin: auto auto auto 20px;
  font-size: 6vw;
  font-weight: bold;
  font-style: italic;
  padding: 10px 5px 10px 5px;
  flex: 6 1 20%;
}



.items-on-bar{
  margin: auto;
  padding: 5px;
  list-style-type: none; /* deletes the bullet points */
  flex:3 4 30%;

  display: flex;
  align-items: center;
  justify-content: space-around;
  flex-wrap: nowrap;
  border-style: solid;
  align-items: center;
  order: 1;
}

.list-bar-item{
  font-size: max(2.5vw, 15px) ;
  align-self: stretch;
  padding: 10px;
  margin: 3px;
  border-radius: 15%;
  border-style: solid;
  border-width: 2px;
}

.list-bar-item:hover{
color: rgba(47, 113, 39, 0.831);
box-shadow: 1px 1px 5px;
}

#current-bar-item{
    color: rgba(47, 113, 39, 0.831);
    }



#name-roles{
  width: 90vw;
  height: 15vh;
  padding-bottom: 50px;
  display: flex;
  flex-direction: column; 
  align-items: center;
  justify-content: space-around;  
}

#introduction-image{
  border-radius: 25%;
  max-width: 60%;
  max-height: 65%;
  align-self: center;
  justify-self: flex-start;
}

#picture{
  position: relative;
  top: 100px;
  max-width: 60%;
  max-height: 50%;
}


#footer{
  position: fixed; 
  bottom: 0;
  width: 100%;
  height: 2.5rem;
  background-color: lightgray;
  color: green;
  text-align: center;

  display: flex;
  justify-content: center;
}

.footer-logos{
  height: 90%;
  width: auto;  
  margin: 2px 30px 0px 2px;
}

#contact{
  padding: 0;
  height: 50vh;
  overflow: hidden;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: flex-end;
}


@media only screen and (max-width: 800px) {
  p{
    font-size: 0.8em;
  }
  main {
    height: 53vh;
    margin: 15vh auto 5vh auto;
    
  }

  #bio-main{
    height: 53vh;
    margin: 170px auto 5vh auto; 
  }

  #name-on-bar{
    margin: auto auto auto 5px;
  }

  .list-bar-item{
    padding: 5px;
    margin: 3px;
  }

  #picture{
    margin-top: 100px;
    padding-top: 100px;
  }
}

#bios-div{
  margin: 40px;
  padding-top: 70px;
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: space-around;
  align-content: space-around;
}

.bio-div{
  flex: 1 1 300px;
  margin: 10px;
  padding: 10px;
  width: 40%;
}

.media-div{
  margin-top: 5vw;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
}

.videos{
  margin: 50px;
}

.audios{
  padding: 8vw;
  width: 80%;
  height: 10%;
}

#email-logo{
  width: 70%;
  padding: 0px;
  margin: 0px;
}

